--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,27 +1,32 @@
 <ion-app>
   <ion-content padding>
-    <img class="img" width="" height="" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Instituto_Federal_do_Paran%C3%A1_-_Marca_Vertical_2015.svg/1200px-Instituto_Federal_do_Paran%C3%A1_-_Marca_Vertical_2015.svg.png">
+    <img class="img" width="" height=""
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Instituto_Federal_do_Paran%C3%A1_-_Marca_Vertical_2015.svg/1200px-Instituto_Federal_do_Paran%C3%A1_-_Marca_Vertical_2015.svg.png">
 
-    <ion-item>
-      <ion-label position="floating">E-mail : <ion-text color="dark">*</ion-text></ion-label>
-      <ion-input required type="text"></ion-input>
-    </ion-item>
+    <form [formGroup]="loginForm">
+      <ion-item>
+        <ion-label position="floating">E-mail : <ion-text color="dark">*</ion-text>
+        </ion-label>
+        <ion-input type="text" formControlName='email'></ion-input>
+      </ion-item>
+      <span *ngIf="loginForm.controls.email.hasError('required')" style="color: red; padding-top: 0.2rem" >Irmão deu erro</span>
+      <span *ngIf="loginForm.controls.email.hasError('email')" style="color: red; padding-top: 0.2rem" >Irmão deu erro no e-mail</span>
 
-    <ion-item>
-      <ion-label position="floating">Senha : <ion-text color="dark">*</ion-text>
-      </ion-label>
-      <ion-input required name="mail" type="password" ></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label position="floating">Senha : <ion-text color="dark">*</ion-text>
+        </ion-label>
+        <ion-input required name="mail" type="password" formControlName='senha'></ion-input>
+      </ion-item>
+
+      <br>
+      <button class="mt btn centro-btn" expand="full" [disabled]="!loginForm.valid" style="background-color:#4aba70" (click)="login()">
+        Entrar
+      </button>
+    </form>
 
     <br>
-    <button class="mt btn centro-btn" expand="full" style="background-color:#4aba70">
-      Entrar
-    </button>
+    <a class="center link fontCustom">Esqueceu a senha?</a>
 
-    <br>
-    <a class="center link mb-1" >Esqueceu a senha?</a>
-  
-    <a class="center link link02" >Não possui uma conta? Cadastre-se</a>
-
+    <a class="center link link02 fontCustom">Não possui uma conta? Cadastre-se</a>
   </ion-content>
 </ion-app>
