--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,21 +5,29 @@
 
     <form [formGroup]="loginForm">
       <ion-item>
-        <ion-label position="floating">E-mail : <ion-text color="dark">*</ion-text>
+        <ion-label position="floating">E-mail<ion-text color="dark">*</ion-text>
         </ion-label>
-        <ion-input type="text" formControlName='email'></ion-input>
+        <ion-input type="text" formControlName='email' required #email></ion-input>
       </ion-item>
-      <span *ngIf="loginForm.controls.email.hasError('required')" style="color: red; padding-top: 0.2rem" >Irmão deu erro</span>
-      <span *ngIf="loginForm.controls.email.hasError('email')" style="color: red; padding-top: 0.2rem" >Irmão deu erro no e-mail</span>
-
+      <span style='color:gray; font-size: 10px' *ngIf="loginForm.controls.email.hasError('required')">
+        Por favor insira o seu e-mail*
+      </span>
+      <span style='color:red; font-size:12px' *ngIf="loginForm.controls.email.hasError('email')">
+        Por favor insira o seu e-mail corretamente
+      </span>
+      
       <ion-item>
         <ion-label position="floating">Senha : <ion-text color="dark">*</ion-text>
         </ion-label>
         <ion-input required name="mail" type="password" formControlName='senha'></ion-input>
       </ion-item>
+        <span style='color:gray; font-size: 10px' *ngIf="loginForm.controls.senha.hasError('required')">
+          Por favor insira a sua senha*
+        </span>
 
       <br>
-      <button class="mt btn centro-btn" expand="full" [disabled]="!loginForm.valid" style="background-color:#4aba70" (click)="login()">
+      <button class="mt btn centro-btn" expand="full" [disabled]="!loginForm.valid" style="background-color:#4aba70"
+        (click)="login()">
         Entrar
       </button>
     </form>
