--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,35 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="content1" side="start">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Jodisney</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="contact" slot="start"></ion-icon>
+          <ion-label>Perfil</ion-label>
+        </ion-item>
+        <ion-item *ngIf="tipo">
+          <ion-icon name="person-add" slot="start"></ion-icon>
+          <ion-label>Novo assistente</ion-label>
+        </ion-item>
+        <ion-item *ngIf="tipo">
+          <ion-icon name="bookmarks" slot="start"></ion-icon>
+          <a routerLink="equipamento">Equipamentos</a>
+        </ion-item>
+        <ion-item *ngIf="tipo">
+          <ion-icon name="pricetag" slot="start"></ion-icon>
+          <ion-label>Categorias</ion-label>
+        </ion-item>
+        <ion-item style="color:red">
+          <ion-icon name="arrow-round-back" slot="start"></ion-icon>
+          Sair
+        </ion-item>
+
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="content1" main></ion-router-outlet>
 </ion-app>
