--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,112 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-title style="margin-left: 20%;color: #4aba70">CEIF IFPR</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="false"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+
+  <!-- ASSISTENTE -->
+
+  <!-- FIM ASSISTENTE -->
+
+
+  <!-- USUARIO -->
+  <!-- LISTA -->
+  <div *ngIf="!tipo">
+    <!-- <ion-list>
+      <ion-item>
+        <ion-avatar slot="start">
+          <img width="30px" height="30px" src="https://blog.certisign.com.br/wp-content/uploads/2018/10/certo.png?cod_rev=38788">
+        </ion-avatar>
+        <ion-label>
+          <h2>Instrumentos</h2>
+          <h3>Violão</h3>
+        </ion-label>
+      </ion-item>
+    </ion-list> -->
+    <ion-list>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-subtitle>Instrumentos</ion-card-subtitle>
+          <ion-card-title>Violão</ion-card-title>
+        </ion-card-header>
+
+        <ion-card-content>
+          <div style="text-align:center">
+            <h2 style="color:blue">Emprestado</h2>
+            <h3>Edmar</h3>
+            <h2>27/09/2019 - 22:00</h2>
+          </div>
+        </ion-card-content>
+        <ion-button (click)="qrcode()">show code</ion-button>
+      </ion-card>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-subtitle>Instrumentos</ion-card-subtitle>
+          <ion-card-title>Violão</ion-card-title>
+        </ion-card-header>
+
+        <ion-card-content>
+          <div style="text-align:center">
+            <h2 style="color:green">Devolvido</h2>
+            <h3>Edmar</h3>
+            <h2>27/09/2019 - 22:00</h2>
+          </div>
+        </ion-card-content>
+        <ion-button (click)="qrcode()">show code</ion-button>
+      </ion-card>
+      <ion-card>
+        <ion-card-header>
+          <ion-card-subtitle>Instrumentos</ion-card-subtitle>
+          <ion-card-title>Guitarra</ion-card-title>
+        </ion-card-header>
+
+        <ion-card-content>
+          <div style="text-align:center">
+            <h2 style="color:green">Devolvido</h2>
+            <h3>Edgar</h3>
+            <h2>27/09/2019 - 22:00</h2>
+          </div>
+        </ion-card-content>
+        <ion-button (click)="qrcode()">show code</ion-button>
+      </ion-card>
+      <!-- LISTA -->
+
+      <div class="ion-padding">
+        <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+          <ion-fab-button color="success">
+            <ion-icon name="add"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
+      </div>
+    </ion-list>
   </div>
+  <!-- FIM USUAIO -->
 </ion-content>
+
+<ion-tabs *ngIf="tipo">
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button routerLink="/equipamento">
+      <ion-icon name="calendar"></ion-icon>
+      <ion-label>Schedule</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="speakers">
+      <ion-icon name="contacts"></ion-icon>
+      <ion-label>Speakers</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="map">
+      <ion-icon name="map"></ion-icon>
+      <ion-label>Map</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="about">
+      <ion-icon name="information-circle"></ion-icon>
+      <ion-label>About</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
