--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <ion-app>
   <ion-content padding>
-    <img class="img" width="" height="" style="margin-top: 10%; margin-bottom: 10%"
-      src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Instituto_Federal_do_Paran%C3%A1_-_Marca_Vertical_2015.svg/1200px-Instituto_Federal_do_Paran%C3%A1_-_Marca_Vertical_2015.svg.png">
+    <img class="img" width="" height="" style="margin-top: 10%; margin-bottom: 5%"
+      src="../../../assets/img/Logo Final.png">
 
     <form [formGroup]="loginForm">
       <ion-item>
