--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,9 +23,9 @@
           <ion-icon name="pricetag" slot="start"></ion-icon>
           <ion-label>Categorias</ion-label>
         </ion-item>
-        <ion-item style="color:red">
+        <ion-item >
           <ion-icon name="arrow-round-back" slot="start"></ion-icon>
-          Sair
+          <a (click)="deslogar()" href="#" style="color:red">Sair</a> 
         </ion-item>
 
       </ion-list>
