Recuperar senha funcionando

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -33,7 +33,7 @@
     </form>
 
     <br>
-    <a class="center link fontCustom">Esqueceu a senha?</a>
+    <a class="center link fontCustom" routerLink="/recuperarSenha">Esqueceu a senha?</a>
 
     <a class="center link link02 fontCustom">Não possui uma conta? Cadastre-se</a>
   </ion-content>
