--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,11 +17,11 @@
         </ion-item>
         <ion-item *ngIf="tipo">
           <ion-icon name="bookmarks" slot="start"></ion-icon>
-          <a routerLink="equipamento">Equipamentos</a>
+          <a>Equipamentos</a>
         </ion-item>
         <ion-item *ngIf="tipo">
           <ion-icon name="pricetag" slot="start" ></ion-icon>
-          <ion-label><a routerLink="/equipamento">Categorias</a> </ion-label>
+          <ion-label><a routerLink="/categoria">Categorias</a> </ion-label>
         </ion-item>
         <ion-item >
           <ion-icon name="arrow-round-back" slot="start"></ion-icon>
