--- a/src/app/equipamento/list-categoria/list-categoria.page.html
+++ b/src/app/equipamento/list-categoria/list-categoria.page.html
@@ -12,7 +12,7 @@
   <ion-searchbar></ion-searchbar>
 
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
-    <ion-fab-button color="success">
+    <ion-fab-button color="success" routerLink="/addcategoria">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
