--- a/src/app/equipamento/addequipamento/addequipamento.component.html
+++ b/src/app/equipamento/addequipamento/addequipamento.component.html
@@ -24,8 +24,8 @@
       </span>
       <ion-item>
         <ion-label>Categoria</ion-label>
-        <ion-select placeholder="Escolha" [(ngModel)]="categoria" formControlName="idCategoria">
-          <ion-select-option *ngFor="let categoria of categorias$| async" value="{{categoria}}" [value]="categoria.nome">{{categoria.nome}}
+        <ion-select placeholder="Escolha" formControlName="idCategoria">
+          <ion-select-option *ngFor="let categoria of categorias$| async" value="{{categoria.id}}">{{categoria.nome}}
           </ion-select-option>
         </ion-select>
       </ion-item>
