--- a/src/app/emprestimo/emprestimo.component.html
+++ b/src/app/emprestimo/emprestimo.component.html
@@ -10,29 +10,12 @@
 
   <ion-content padding>
     <form>
-      <ion-item>
-        <div class="controls">
-          <ion-label class="inputCustom" position="floating">Descricao do Material<ion-text style="color:red">*
-            </ion-text>
-          </ion-label>
-          <ion-input type="text"></ion-input>
-        </div>
-      </ion-item>
-      <ion-item>
-        <ion-label>Categoria</ion-label>
-        <ion-select placeholder="Escolha">
-          <ion-select-option>
-          </ion-select-option>
-        </ion-select>
-      </ion-item>
-      <ion-item>
-        <div class="controls">
-          <ion-label class="inputCustom" position="floating">Quantidade<ion-text style="color:red">*
-            </ion-text>
-          </ion-label>
-          <ion-input type="text"></ion-input>
-        </div>
-      </ion-item>
+    <ion-item>
+      <ion-label>Port</ion-label>
+      <ionic-selectable [items]="listaMaterial" itemValueField="id"
+        itemTextField="descricao" [canSearch]="true" (onChange)="portChange($event)">
+      </ionic-selectable>
+    </ion-item>
       <button class="mt btn centro-btn" style="background-color:#4aba70;margin-top:5% " expand="full"
       color="secondary" >
         Salvar
