--- a/src/app/emprestimo/emprestimo.component.html
+++ b/src/app/emprestimo/emprestimo.component.html
@@ -35,7 +35,7 @@
     </ion-item>
       <button class="mt btn centro-btn" style="background-color:#4aba70;margin-top:5% " expand="full"
       color="secondary" [disabled]="!itenLocacaoForm.valid" (click)="addMaterial()" >
-        Salvar
+        Adicionar
       </button>
       <br>
     </form>
