Cadastro usuário funcionando

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu contentId="content1" side="start">
     <ion-header>
       <ion-toolbar>
-        <ion-title>Jodisney</ion-title>
+        <ion-title>{{nomeUsuario}}</ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-content>
