--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -35,6 +35,6 @@
     <br>
     <a class="center link fontCustom" routerLink="/recuperarSenha">Esqueceu a senha?</a>
 
-    <a class="center link link02 fontCustom">Não possui uma conta? Cadastre-se</a>
+    <a class="center link link02 fontCustom" routerLink="/cadastroUsuario">Não possui uma conta? Cadastre-se</a>
   </ion-content>
 </ion-app>
