--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title><span style="margin-left: 30%;color: #4aba70">CEIF IFPR</span></ion-title>
+    <ion-title><span style="margin-left: 25%;color: #4aba70">CEIF IFPR</span></ion-title>
     <ion-buttons slot="start">
       <ion-menu-button autoHide="false"></ion-menu-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button>
+      <ion-button *ngIf="tipo" (click)="scanner()">
         <ion-icon name="camera"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -69,7 +69,9 @@
           <h3>Edmar</h3>
         </div>
       </ion-card-content>
-      <ion-button (click)="qrcode()" style="padding-bottom:1%">QR Code</ion-button>
+      <ion-button (click)="createCode(locacaoFora.id)" style="padding-bottom:1%">QR Code</ion-button>
+      <ngx-qrcode *ngIf="createCode" [qrc-value]="createdCode"></ngx-qrcode>
+      {{createdCode}}
     </ion-card>
     <!-- LISTA -->
   </div>
