--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,7 +6,7 @@
     <form [formGroup]="loginForm">
       <ion-item>
         <div class="controls">
-          <ion-label class="inputCustom" position="floating">E-mail<ion-text color="dark">*</ion-text>
+          <ion-label class="inputCustom" position="floating">E-mail: <ion-text color="dark">*</ion-text>
           </ion-label>
           <ion-input type="text" formControlName='email' required #email></ion-input>
         </div>
@@ -19,7 +19,7 @@
       </span>
 
       <ion-item style="margin-top: 5%">
-        <ion-label position="floating">Senha : <ion-text color="dark">*</ion-text>
+        <ion-label position="floating">Senha: <ion-text color="dark">*</ion-text>
         </ion-label>
         <ion-input required name="mail" type="password" formControlName='senha'></ion-input>
       </ion-item>
