--- a/src/app/auth/cadastrar-assistente/cadastrar-assistente.component.html
+++ b/src/app/auth/cadastrar-assistente/cadastrar-assistente.component.html
@@ -13,7 +13,7 @@
 
           <ion-item>
             <div class="controls">
-              <ion-label class="inputCustom" position="floating">CPF<ion-text color="dark">*</ion-text>
+              <ion-label class="inputCustom" position="floating">CPF: <ion-text color="dark">*</ion-text>
               </ion-label>
               <ion-input type="text" formControlName='cpf' required></ion-input>
             </div>
@@ -28,7 +28,7 @@
           </span>
           <ion-item>
             <div class="controls">
-              <ion-label class="inputCustom" position="floating">E-mail<ion-text color="dark">*</ion-text>
+              <ion-label class="inputCustom" position="floating">E-mail: <ion-text color="dark">*</ion-text>
               </ion-label>
               <ion-input type="text" formControlName='email' required #email></ion-input>
             </div>
